--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
       <div class="container">
 
         <div class="habilidade">
-          <img src="https://i.ibb.co/dpn3178/C-pia-de-avatar-leopoldo-1.gif" class="control">
+          <img src="./assets/vovo.jpeg" class="control">
           <h3>Leopoldo Sugata</h3>
-          <p>Estudante do BC&T e amante das tecnologias. </p>
+          <p>Estudante do BC&T.</p>
           <p>RA: 11201722022</p>
-          <br>
+          <br>dddddd
         </div>
 
 
         <div class="habilidade">
           <img src="https://i.ibb.co/7gtbvBj/C-pia-de-avatar-leonardo-1-1.gif" class="control">
-          <h3>Leonardo Kenji</h3>
-          <p>Estudante do BC&T e curto muito /programar/.</p>
-          <p>RA: 11201810940</p>        
+          <h3>Francisco Simão</h3>
+          <p>Estudante do BC&T e curto muito tecnologias</p>
+          <p>RA: 11053313</p>        
         </div>
         
     </div>
