--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
           <h3>Leopoldo Sugata</h3>
           <p>Estudante do BC&T.</p>
           <p>RA: 11201722022</p>
-          <br>dddddd
+          <br>
         </div>
 
 
         <div class="habilidade">
-          <img src="https://i.ibb.co/7gtbvBj/C-pia-de-avatar-leonardo-1-1.gif" class="control">
+          <img src="./assets/Luffy.jpg" class="control">
           <h3>Francisco Simão</h3>
           <p>Estudante do BC&T e curto muito tecnologias</p>
           <p>RA: 11053313</p>        
@@ -60,10 +60,14 @@
     <!-- Relatórios -->
     <div class="caixa3" id="relatorios">
         <h2 class="titulocontato">Relatórios (Entregas) </h2>
-        <h3 class="titulocontato2">Lab01: OpenGL linux (Prazo: 06.10.2022) </h3>
+        <h3 class="titulocontato2" >Lab01: Captura de Imagem e Vídeo</h3>
+        <a  class="titulocontato2" href="https://docs.google.com/document/d/1uhEIBPpt_b7rCOv38ZDVxn-b9pfwPxjNyGVYzFh-OuE/edit?usp=sharing">Relatório</a>
+        <br>
         
-        <img src="https://i.ibb.co/br91qMX/leopoldo-sugata.png" class="control3">
-        <h5>LAB01 - Leopoldo Sugata </h5> 
+        <img src="https://drive.google.com/uc?id=1HjA3jFhyq_-yqZhZcrV-q_4aPW10oJ8a" class="control3">
+        <img src="https://drive.google.com/uc?id=1pCKm6iowNhL0WPeAGSkkBooF94xZfbe9" class="control3">
+        <video src="https://drive.google.com/uc?id=1CcDnz43DcRmxZTzwRajztFGnbLD-aQIn"class="control3"></video>
+        <h5>Alguma coisa aqui</h5> 
         <p> ----- </p>
         <p>    </p>
     </div>
