--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         
         <img src="https://drive.google.com/uc?id=1HjA3jFhyq_-yqZhZcrV-q_4aPW10oJ8a" class="control3">
         <img src="https://drive.google.com/uc?id=1pCKm6iowNhL0WPeAGSkkBooF94xZfbe9" class="control3">
-        <video src="https://drive.google.com/uc?id=1CcDnz43DcRmxZTzwRajztFGnbLD-aQIn"class="control3"></video>
+        <iframe src="https://drive.google.com/file/d/1CcDnz43DcRmxZTzwRajztFGnbLD-aQIn/preview" width="640" height="480" class="control3" allow="autoplay"></iframe>
         <h5>Alguma coisa aqui</h5> 
         <p> ----- </p>
         <p>    </p>
