--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <P><strong>Entrevistado:</strong>Ramon Mello, Policial militar e estudante de segurança pública</P>
             <P><strong>Aplicação:</strong>Para o desenvolvimento da aplicação será utilizado o opencv e seus módulos específicos de detecção de movimento</P>
             <P><strong>Equipamento:</strong>Webcam e algumas marcações para pontos de contraste</P>
-            <P><strong>Iteração com usuário:</strong>O sistema retornaria se a execução do exercício foi correta e  a quantidade de repetições executadas em determinado periodo.</P>
+            <P><strong>Interação com usuário:</strong>O sistema retornaria se a execução do exercício foi correta e  a quantidade de repetições executadas em determinado periodo.</P>
         </div>
     
     </div>
