--- a/index.html
+++ b/index.html
@@ -80,14 +80,15 @@
         <a  class="titulocontato2" href="https://drive.google.com/uc?export=download&id=1sBJq_nTYJf17qVuHaagz3QjYdgpzsFVi" target="_blank" >Imagens | </a>
         <a  class="titulocontato2" href="https://drive.google.com/uc?export=download&id=1MvQJJQ0fA45GJomVR1MM5V3r9Vee0Nuf" target="_blank" >Vídeos</a>
         <br>
+        <br>
         <div class="grid_1">
           <img class="control3" src="./assets/relatorio_1/fotos/Foto1.png" >
           <img class="control3" src="./assets/relatorio_1/fotos/Luffy-Abe.png" >
-          <video class="control3" src="./assets/relatorio_1/videos/saida.mp4"></video>
-          <video class="control3" src="./assets/relatorio_1/videos/Leopoldo_Devagar.mp4"></video>
-          <video class="control3" src="./assets/relatorio_1/videos/chico-rapido.mp4"></video>
-          <video class="control3" src="./assets/relatorio_1/videos/chico-caneca-lento.mp4"></video>
-          <video class="control3" src="./assets/relatorio_1/videos/chico-caneca-rapido.mp4"></video>
+          <video class="control3" controls src="./assets/relatorio_1/videos/saida.mp4"></video>
+          <video class="control3" controls src="./assets/relatorio_1/videos/Leopoldo_Devagar.mp4"></video>
+          <video class="control3" controls src="./assets/relatorio_1/videos/chico-rapido.mp4"></video>
+          <video class="control3" controls src="./assets/relatorio_1/videos/chico-caneca-lento.mp4"></video>
+          <video class="control3" controls src="./assets/relatorio_1/videos/chico-caneca-rapido.mp4"></video>
         </div>
     </div>
 
@@ -97,6 +98,7 @@
         <h3 class="titulocontato2" >Lab02: Captura de Imagem e Vídeo</h3>
         <a  class="titulocontato2" href="https://drive.google.com/uc?export=download&id=1LTRBjgBTNzb8exqDzWg68o-n2l_TPSY1" target="_blank" >Códigos e programas | </a>
         <a  class="titulocontato2" href="https://drive.google.com/uc?export=download&id=1SOxxk6uIdkiMxdbwUNxOyyE8I7MSssSE" target="_blank" >Imagens | </a>
+        <br>
         <br>
         <div class="grid_2">
           <img class="control3" src="./assets/relatorio_2/fotos/Frank_limpa.png" >
@@ -112,6 +114,24 @@
           <img class="control3" src="./assets/relatorio_2/fotos/Leop_blur.png" >
         </div>
     </div>
+    <br>
+    <!-- Lab 03-->
+    <div class="RELATORIO_3">
+      <h3 class="titulocontato2" >Lab03: Espaço de Cores</h3>
+      <a  class="titulocontato2" href="https://drive.google.com/uc?export=download&id=1w5CzhIumBJ6VgXYd6JWaj_9Li4btc9-E" target="_blank" >Relatório em PDF | </a>
+        <a  class="titulocontato2" href="https://drive.google.com/uc?export=download&id=10No3iHK525r8ZjcReePXAZ9eH8ugcwJU" target="_blank" >Códigos e programas | </a>
+        <a  class="titulocontato2" href="https://drive.google.com/uc?export=download&id=1Z35SvX2NPEVOmvEZsilr5tUZ0PT3qj12" target="_blank" >Imagens | </a>
+        <a  class="titulocontato2" href="https://drive.google.com/uc?export=download&id=1JOnJznMZ_suJmzk4BuC_PvkW1sEp1GpR" target="_blank" >Vídeos</a>
+      <br>
+      <br>
+      <div class="grid_3">
+        <video class="control3" controls src="./assets/relatorio_3/videos/saida_limpa.mp4"></video>
+        <video class="control3" controls src="./assets/relatorio_3/videos/saida_mask.mp4"></video>
+        <video class="control3" controls src="./assets/relatorio_3/videos/saida_verde.mp4"></video>
+
+
+      </div>
+  </div>
 
   </body>
 </html>
