--- a/index.html
+++ b/index.html
@@ -128,9 +128,28 @@
         <video class="control3" controls src="./assets/relatorio_3/videos/saida_limpa.mp4"></video>
         <video class="control3" controls src="./assets/relatorio_3/videos/saida_mask.mp4"></video>
         <video class="control3" controls src="./assets/relatorio_3/videos/saida_verde.mp4"></video>
-
+      </div>
+  </div>
+  <br>
+  <!-- Lab 04-->
+  <div class = "RELATORIO_4">
+      <h3 class="titulocontato2"> Lab04:Histogramas e Limiarização</h3>
+      <a  class="titulocontato2" href="https://drive.google.com/uc?export=download&id=1QLASX_mQH_InbdLy6lfFCPxpyzu-JPCJ" target="_blank" >Relatório em PDF | </a>
+      <a  class="titulocontato2" href="https://drive.google.com/uc?export=download&id=10h4FfB9pZuWjCLPMHxKGyKAqgKeMm9-A" target="_blank" >Códigos e programas | </a>
+      <a  class="titulocontato2" href="https://drive.google.com/uc?export=download&id=1tDHC5vg6ikeIzPXrx7gxovc9oM2PmuFr" target="_blank" >Imagens | </a>
+      <br>
+      <br>
+      <div class="grid_4">
+        <img class="control3" src="./assets/relatorio_4/fotos/chico_equalizado.jpeg" >
+        <img class="control3" src="./assets/relatorio_4/fotos/chico_histogram.png" >
+        <img class="control3" src="./assets/relatorio_4/fotos/leo_equalizer.jpeg" >
+        <img class="control3" src="./assets/relatorio_4/fotos/leo_histogram.png" >
+        <img class="control3" src="./assets/relatorio_4/fotos/webcam_normal_and_equalizer.png" >
+        <img class="control3" src="./assets/relatorio_4/fotos/binary.png" >
+        <img class="control3" src="./assets/relatorio_4/fotos/color_equalizer.jpeg" >
 
       </div>
+
   </div>
 
   </body>
