--- a/index.html
+++ b/index.html
@@ -222,7 +222,6 @@
       <br>
       <div class="grid_4">
         
-
         <figure class="grid-item4" > 
           <img  src="./assets/relatorio_4/fotos/chico_foto_histogram.png" >
           <figcaption >Your label goes here</figcaption>
@@ -314,34 +313,52 @@
     <figcaption>Your label goes here</figcaption>
   </figure>
 </div>
-
-<button onclick="playRel5b()">Play</button>
-    <button onclick="continueRel5b()">Continue</button>
-    <button onclick="pauseRel5b()">Pause</button>
-    <br>
-    <br>
-    <script>
-      function playRel5b() {
-        document.getElementById("rel5b_vid1").currentTime = 0;
-        document.getElementById("rel5b_vid2").currentTime = 0;
-        document.getElementById("rel5b_vid3").currentTime = 0;
-        document.getElementById("rel5b_vid1").play();
-        document.getElementById("rel5b_vid2").play();
-        document.getElementById("rel5b_vid3").play();
-      }
-      function pauseRel5b() {
-        document.getElementById("rel5b_vid1").pause();
-        document.getElementById("rel5b_vid2").pause();
-        document.getElementById("rel5b_vid3").pause();
-      }
-      function continueRel5b() {
-        document.getElementById("rel5b_vid1").play();
-        document.getElementById("rel5b_vid2").play();
-        document.getElementById("rel5b_vid3").play();
-      }
-      </script>
+</div>
+<br>
 
 
+
+
+<div class="RELATORIO_6">
+  <br>
+  <h3 class="tituloLab"> Lab06: Features</h3>
+  <a  class="downloadlink" href="https://drive.google.com/uc?export=download&id=1fvtDXadoXBf9tOw8GxROk_TgIKxQTZLf" target="_blank" >Relatório em PDF</a>
+  <a  class="downloadlink" href="https://drive.google.com/uc?export=download&id=1H1xuKwRXKrbZm7BURvy5XBP5gM34fE_X" target="_blank" >Códigos e programas</a>
+  <a  class="downloadlink" href="https://drive.google.com/uc?export=download&id=1nh1XYC1Qv43N6XxuGyHpiiNX6sbIT-6K" target="_blank" >Vídeos</a>
+  <br>
+  <br>
+
+  <div class="grid_6">
+    <figure class="grid-item6">
+      <img src="./assets/relatorio_6/fotos/lab6a.png" alt="">
+      <figcaption>Your label goes here</figcaption>
+    </figure>
+    <figure class="grid-item6">
+      <img src="./assets/relatorio_6/fotos/lab6b.png" alt="">
+      <figcaption>Your label goes here</figcaption>
+    </figure>
+    <figure class="grid-item6">
+      <img src="./assets/relatorio_6/fotos/lab6c.png" alt="">
+      <figcaption>Your label goes here</figcaption>
+    </figure>
+  </div>
+
+  <div class="grid_6">
+    <figure class="grid-item6">
+      <video  controls src="./assets/relatorio_6/videos/lab6d_A.mp4"></video>
+      <figcaption>Your label goes here</figcaption>
+    </figure>
+    <figure class="grid-item6">
+      <video   controls src="./assets/relatorio_6/videos/lab6d_B.mp4"></video>
+      <figcaption>Your label goes here</figcaption>
+    </figure>
+    <figure class="grid-item6">
+      <video   controls src="../assets/relatorio_6/videos/lab6d_C.mp4"></video>
+      <figcaption>Your label goes here</figcaption>
+    </figure>
+  </div>
+
+</div>
 
   </div>
   </body>
