--- a/index.html
+++ b/index.html
@@ -66,7 +66,19 @@
             <P ><strong>Equipamento:</strong>Webcam, barra-fixa e algumas marcações para pontos de contraste.</P>
             <P><strong>Interação com usuário:</strong>O sistema retornaria se a execução do exercício foi correta e  a quantidade de repetições executadas em determinado período.</P>
         </div>
-    
+
+        <h3 class="tituloLab">  
+  
+        <a  class="downloadlink" href="https://drive.google.com/uc?export=download&id=1jU8GTrZKDr-t61dcrWc2Lu3JV3RBGBkY" target="_blank" >Introdução</a>
+        <a  class="downloadlink" href="https://drive.google.com/uc?export=download&id=1ObAORsMbR-M7CU2QeaClDxMojOM3TV0y" target="_blank" >Programa</a>
+        <a  class="downloadlink" href="https://drive.google.com/uc?export=download&id=1GiFMoSGbrpgzO_AzvhSUqp2r6FXuGyyB" target="_blank" >Modelagem</a>
+        <a  class="downloadlink" href="https://drive.google.com/uc?export=download&id=1PFoNgVRHyQmtV-AkAdbifu8-c_eIOgMI" target="_blank" >Manual</a>
+        <a  class="downloadlink" href="https://drive.google.com/uc?export=download&id=18Bfxf5S5xeStZKDDL-SAosEF2gZYKRrV" target="_blank" >Roteiro experimental</a>
+        <br>
+        <br>
+        <h2 class="titulocontato">Cenário de aplicação</h6>
+        <br>
+        <p>O nosso modelo de processamento de vídeo pode ser utilizado em qualquer espaço onde seja possível realizar a prática da barra fixa ou salto vertical, desde que haja o mínimo de iluminação e espaço de enquadramento.</p>
     </div>
     <br>
 
@@ -320,11 +332,11 @@
 
 
 <div class="RELATORIO_6">
-  <br>
   <h3 class="tituloLab"> Lab06: Features</h3>
   <a  class="downloadlink" href="https://drive.google.com/uc?export=download&id=1fvtDXadoXBf9tOw8GxROk_TgIKxQTZLf" target="_blank" >Relatório em PDF</a>
-  <a  class="downloadlink" href="https://drive.google.com/uc?export=download&id=1H1xuKwRXKrbZm7BURvy5XBP5gM34fE_X" target="_blank" >Códigos e programas</a>
-  <a  class="downloadlink" href="https://drive.google.com/uc?export=download&id=1nh1XYC1Qv43N6XxuGyHpiiNX6sbIT-6K" target="_blank" >Vídeos</a>
+  <a  class="downloadlink" href="https://drive.google.com/uc?export=download&id=1gY29YT5rwOTBuCTeGvTMyS3wD01ZDxzu" target="_blank" >Códigos e programas</a>
+  <a  class="downloadlink" href="https://drive.google.com/uc?export=download&id=1PFoNgVRHyQmtV-AkAdbifu8-c_eIOgMI" target="_blank" >Vídeos</a>
+  <a  class="downloadlink" href="https://drive.google.com/uc?export=download&id=1dHM7U4Gw5hCdt0SRVHvNu46RYcmGHahF" target="_blank" >Imagens</a>
   <br>
   <br>
 
